# GameEngine-The-Sequel

./: .gitignore  CMakeLists.txt  README.md  Stuff.txt  build.bat  debug.bat  path.txt  rebuild.bat  run.bat
CMake/: 3DBrowser.sln  3DBrowser.vcxproj  3DBrowser.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMake/3DBrowser.dir/Debug/: 3DBrowser.exe.recipe  3DBrowser.ilk
CMake/3DBrowser.dir/Debug/3DBrowser.tlog/: 3DBrowser.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMake/Debug/: 3DBrowser.ilk
CMake/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
CMake/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
CMake/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
CMake/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
include/: camera.h  cgltf.h  entity.h  entityold.h  memory.h  renderer.h  shader.h  transform.h  window.h
include/glad/: glad.h
src/: camera.cpp  glad.c  main.cpp  memory.cpp  renderer.cpp  shader.cpp  transform.cpp  window.cpp
